templates/ha_3_nic_same_zone/legacy-eni-migration-method/ha_3_nic_same_zone.template
---
Description: Creates a HA pair with two instance of Citrix BYOL ADC with 3 ENIs associated to 3 VPC subnets (Management, Client, Server) on primary and 1 ENI for Management in secondary in the same availability zone.


Parameters:
  pCitrixADCImageID:
    Type: String
    Default: ''
    Description: >-
      AMI ID of Citrix ADC to be provisioned. If left empty, "Citrix ADC VPX - Customer Licensed Version 12.1-50.28 (https://aws.amazon.com/marketplace/pp/B00AA01BOE)" is provisioned by default
  pSSHCidrIp:
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can SSH to the EC2 instance (port: 22)."
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pHTTPCidrIp:
    Default: 0.0.0.0/0
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can HTTP to the EC2 instance (port: 80)."
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pHTTPSCidrIp:
    Default: 0.0.0.0/0
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can HTTPS to the EC2 instance (port: 443)."
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pVpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID of your existing Virtual Private Cloud (VPC)
  pManagementIPSec:
    Default: ""
    Type: String
    Description:
      Private IP assigned to the Management ENI of Secondary, if HA pair
      to be created (last octet has to be between 5 and 254). Leave empty for automatic
      assignment or if no high availavbility.
  pServerSubnet:
    Type: AWS::EC2::Subnet::Id
    Description:
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Server side.
  pInstanceType:
    Default: m4.xlarge
    ConstraintDescription: Must be a valid EC2 instance type.
    Type: String
    Description: Type of Citrix ADC instance
    AllowedValues:
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
  pClientSubnet:
    Type: AWS::EC2::Subnet::Id
    Description:
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Client side
  pKeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
  pManagementIP:
    Default: ""
    Type: String
    Description:
      Private IP assigned to the Management ENI of Primary (last octet
      has to be between 5 and 254). Leave empty for automatic assignment.
  pManagementSubnet:
    Type: AWS::EC2::Subnet::Id
    Description:
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for management IP
  pServerIP:
    Default: ""
    Type: String
    Description:
      Private IP assigned to the Server ENI (last octet has to be between
      5 and 254). Leave empty for automatic assignment.
  pTenancyType:
    Default: default
    Type: String
    Description: Tenancy Model
    AllowedValues:
      - default
      - dedicated
  pClientIP:
    Default: ""
    Type: String
    Description:
      Private IP assigned to the Client ENI (last octet has to be between
      5 and 254). Leave empty for automatic assignment.
  PublishCloudwatchMetrics:
    Default: 'Yes'
    Type: String
    AllowedValues:
    - 'Yes'
    - 'No'
    Description: Enter "Yes" to enable publishing of VPX metrics to Cloudwatch, or
      "No" to disable publishing.


Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Citrix ADC Image
        Parameters:
          - pCitrixADCImageID
      - Label:
          default: Virtual Private Network Configuration
        Parameters:
          - pVpcId
          - pSSHCidrIp
          - pHTTPCidrIp
          - pHTTPSCidrIp
      - Label:
          default: Network Interface Configuration
        Parameters:
          - pManagementIP
          - pManagementIPSec
          - pManagementSubnet
          - pClientIP
          - pClientSubnet
          - pServerIP
          - pServerSubnet

      - Label:
          default: Instance Configuration
        Parameters:
          - pKeyName
          - pInstanceType
          - pTenancyType
          - PublishCloudwatchMetrics

    ParameterLabels:
      pCitrixADCImageID:
        default: Citrix ADC AMI ID

      pVpcId:
        default: VPC ID*
      pSSHCidrIp:
        default: Remote SSH CIDR IP*
      pHTTPCidrIp:
        default: Remote HTTP CIDR IP*
      pHTTPSCidrIp:
        default: Remote HTTPS CIDR IP*
      pManagementIP:
        default: Primary Management IP
      pManagementIPSec:
        default: Secondary Management IP
      pManagementSubnet:
        default: Management Subnetwork*
      pClientIP:
        default: Client IP
      pClientSubnet:
        default: Client Subnetwork*
      pServerIP:
        default: Server IP
      pServerSubnet:
        default: Server Subnetwork*
      pKeyName:
        default: Key Pair*
      pInstanceType:
        default: Instance Type*
      pTenancyType:
        default: Tenancy Model*
      PublishCloudwatchMetrics:
        default: Enable publishing custom metrics to cloudwatch?


AWSTemplateFormatVersion: "2010-09-09"


Outputs:
  ApplicationData:
    Value:
      Fn::GetAtt:
        - myWaitCondition
        - Data
    Description: The data passed back as part of signalling the WaitCondition.
  IPAddressNSSec:
    Description:
      Elastic IP address of the Citrix ADC Secondary instance associated
      with Management
    Value:
      Ref: rEipNsipSec
  IPAddressNS:
    Description:
      Elastic IP address of the Citrix ADC Primary instance associated with
      Management
    Value:
      Ref: rEipNsip
  InstanceIdNSSec:
    Description: Instance Id of newly created Secondary Citrix ADC instance
    Value:
      Ref: rVPXInstanceSec
  InstanceIdNS:
    Description: Instance Id of newly created Primary Citrix ADC instance
    Value:
      Ref: rVPXInstance


Conditions:
  cUseCitrixADCImageID: !Not
    - !Equals
      - !Ref pCitrixADCImageID
      - ""
  cManagementIP:
    Fn::Not:
      - Fn::Equals:
          - Ref: pManagementIP
          - ""
  cClientIP:
    Fn::Not:
      - Fn::Equals:
          - Ref: pClientIP
          - ""
  cManagementIPSec:
    Fn::Not:
      - Fn::Equals:
          - Ref: pManagementIPSec
          - ""
  cServerIP:
    Fn::Not:
      - Fn::Equals:
          - Ref: pServerIP
          - ""


Resources:
  rSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription:
        Enable SSH access via port 22, HTTP with port 80 and HTTPS
        with port 443
      VpcId:
        Ref: pVpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp:
            Ref: pSSHCidrIp
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp:
            Ref: pHTTPCidrIp
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp:
            Ref: pHTTPSCidrIp
  rInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      SourceSecurityGroupId:
        Fn::GetAtt:
          - rSecurityGroup
          - GroupId
      GroupId:
        Fn::GetAtt:
          - rSecurityGroup
          - GroupId
  rClientENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId:
        Ref: pClientSubnet
      GroupSet:
        - Ref: rSecurityGroup
      Description: ENI connected to client subnet
      PrivateIpAddress:
        Fn::If:
          - cClientIP
          - Ref: pClientIP
          - Ref: AWS::NoValue
  rCitrixNodesInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      Path: "/"
      Policies:
        - PolicyName: Citrixnode
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Action:
                  - ec2:DescribeInstances
                  - ec2:DescribeNetworkInterfaces
                  - ec2:DetachNetworkInterface
                  - ec2:AttachNetworkInterface
                  - ec2:StartInstances
                  - ec2:StopInstances
                  - ec2:RebootInstances
                  - "autoscaling:*"
                  - "sns:*"
                  - "sqs:*"
                  - "iam:SimulatePrincipalPolicy"
                  - "iam:GetRole"
                Resource: "*"
                Effect: Allow
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action:
              - sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
  rCitrixNodesProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - Ref: rCitrixNodesInstanceRole
  rEipNsipSec:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  rServerENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId:
        Ref: pServerSubnet
      GroupSet:
        - Ref: rSecurityGroup
      Description: ENI connected to client subnet
      PrivateIpAddress:
        Fn::If:
          - cServerIP
          - Ref: pServerIP
          - Ref: AWS::NoValue
  rEipNsip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  rNsipENISec:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId:
        Ref: pManagementSubnet
      GroupSet:
        - Ref: rSecurityGroup
      Description: ENI connected to Management subnet
      PrivateIpAddress:
        Fn::If:
          - cManagementIPSec
          - Ref: pManagementIPSec
          - Ref: AWS::NoValue
      SecondaryPrivateIpAddressCount: 1
  rVPXInstance:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
        - Key: Name
          Value: NetscalerPrimary
      UserData:
        Fn::Base64:
          Fn::Join:
            - "\n"
            - - Fn::Join:
                - ""
                - - HAPeerIP=
                  - Fn::GetAtt:
                    - rNsipENISec
                    - PrimaryPrivateIpAddress
              - Fn::Join:
                - ''
                - - PublishCloudwatchMetrics=
                  - Ref: PublishCloudwatchMetrics
              - Ref: rMyWaitHandle
      ImageId: !If
        - cUseCitrixADCImageID
        - !Ref pCitrixADCImageID
        - !FindInMap
          - AWSAMIRegionMap
          - !Ref AWS::Region
          - CITRIXADC
      KeyName:
        Ref: pKeyName
      Tenancy:
        Ref: pTenancyType
      IamInstanceProfile:
        Ref: rCitrixNodesProfile
      InstanceType:
        Ref: pInstanceType
      NetworkInterfaces:
        - DeviceIndex: "0"
          NetworkInterfaceId:
            Ref: rNsipENI
        - DeviceIndex: "1"
          NetworkInterfaceId:
            Ref: rClientENI
        - DeviceIndex: "2"
          NetworkInterfaceId:
            Ref: rServerENI
  rNsipENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId:
        Ref: pManagementSubnet
      GroupSet:
        - Ref: rSecurityGroup
      Description: ENI connected to Management subnet
      PrivateIpAddress:
        Fn::If:
          - cManagementIP
          - Ref: pManagementIP
          - Ref: AWS::NoValue
      SecondaryPrivateIpAddressCount: 1
  rAssociateEipNsip:
    Type: AWS::EC2::EIPAssociation
    Properties:
      NetworkInterfaceId:
        Ref: rNsipENI
      AllocationId:
        Fn::GetAtt:
          - rEipNsip
          - AllocationId
  rMyWaitHandle:
    Type: AWS::CloudFormation::WaitConditionHandle
    Properties: {}
  myWaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    DependsOn: rVPXInstance
    Properties:
      Count: 0
      Handle:
        Ref: rMyWaitHandle
      Timeout: "60"
  rVPXInstanceSec:
    DependsOn: myWaitCondition
    Type: AWS::EC2::Instance
    Properties:
      Tags:
        - Key: Name
          Value: NetscalerSecondary
      UserData:
        Fn::Base64:
          Fn::Join:
            - "\n"
            - - Fn::Join:
                  - ""
                  - - HAPeerIP=
                    - Fn::GetAtt:
                        - rNsipENI
                        - PrimaryPrivateIpAddress
              - Fn::Join:
                  - ""
                  - - HAPeerInstanceId=
                    - Ref: rVPXInstance
              - Fn::Join:
                  - ''
                  - - PublishCloudwatchMetrics=
                    - Ref: PublishCloudwatchMetrics
              - Ref: rMyWaitHandle
      ImageId: !If
        - cUseCitrixADCImageID
        - !Ref pCitrixADCImageID
        - !FindInMap
          - AWSAMIRegionMap
          - !Ref AWS::Region
          - CITRIXADC
      KeyName:
        Ref: pKeyName
      Tenancy:
        Ref: pTenancyType
      IamInstanceProfile:
        Ref: rCitrixNodesProfile
      InstanceType:
        Ref: pInstanceType
      NetworkInterfaces:
        - DeviceIndex: "0"
          NetworkInterfaceId:
            Ref: rNsipENISec
  rAssociateEipNsipSec:
    Type: AWS::EC2::EIPAssociation
    Properties:
      NetworkInterfaceId:
        Ref: rNsipENISec
      AllocationId:
        Fn::GetAtt:
          - rEipNsipSec
          - AllocationId


Mappings:
  AWSAMIRegionMap:
    AMI:
      CITRIXADC: Citrix NetScaler and CloudBridge Connector 13.0-52.24-64-63425ded-82f0-4b54-8cdd-6ec8b94bd4f8-ami-05e241fd9b61abb3a.4
    us-gov-west-1:
      CITRIXADC: ami-00d2e361
    us-gov-east-1:
      CITRIXADC: ami-21f11d50
    us-east-2: # US East (Ohio)
      CITRIXADC: ami-0e8e26c508fa94732
    us-east-1: # US East (N. Virginia)
      CITRIXADC: ami-0bb96d1f8f79db909
    us-west-1: # US West (N. California)
      CITRIXADC: ami-0707f52c208d83427
    us-west-2: # US West (Oregon)
      CITRIXADC: ami-0503d15aed657c87d
    ap-east-1: # Asia Pacific (Hong Kong)
      CITRIXADC: ami-0b44e0d299d3b3a33
    ap-south-1: # Asia Pacific (Mumbai)
      CITRIXADC: ami-027978a22dc893058
    ap-northeast-2: # Asia Pacific (Seoul)
      CITRIXADC: ami-0ad520c016e96f260
    ap-southeast-1: # Asia Pacific (Singapore)
      CITRIXADC: ami-0316840d86abe4e5e
    ap-southeast-2: # Asia Pacific (Sydney)
      CITRIXADC: ami-02098e6dfe08d9299
    ap-northeast-1: # Asia Pacific (Tokyo)
      CITRIXADC: ami-0a5d628c2e1ea45e9
    ca-central-1: # Canada (Central)
      CITRIXADC: ami-02cbae7662e592d24
    eu-central-1: # Europe (Frankfurt)
      CITRIXADC: ami-05d81856537a0cfc2
    eu-west-1: # Europe (Ireland)
      CITRIXADC: ami-023da45cff4446484
    eu-west-2: # Europe (London)
      CITRIXADC: ami-037b51b95111f4231
    eu-west-3: # Europe (Paris)
      CITRIXADC: ami-0bd4c025bd6afab4a
    eu-north-1: # Europe (Stockholm)
      CITRIXADC: ami-01672d9e4fd60f85d
    sa-east-1: # South America (São Paulo)
      CITRIXADC: ami-0c66fc6fff94c64b9
